Issue #23735: Add SIGWINCH handler for Readline 6.3+ support, by Eric Price